<resources>
    <string name="app_name">Dating_app</string>
    <string name="prompt_email">Email:</string>
    <string name="prompt_password">Password:</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">Username</string>
    <string name="btn_text_facebook">Sign in with Facebook</string>
    <string name="btn_text_google">Sign in with Google</string>
    <string name="btn_text_login">Login</string>
    <string name="btn_text_register">Register</string>
    <string name="prompt_firstname">Firstname:</string>
    <string name="prompt_surname">Surname:</string>
    <string name="title_aboutyou">About You</string>
    <string name="btn_text_return">Return</string>
    <string name="btn_text_next">Next</string>
    <string name="prompt_age">Age:</string>
    <string name="prompt_dob">Date of birth:</string>
    <string name="prompt_day">DD</string>
    <string name="prompt_month">MM</string>
    <string name="prompt_year">YYYY</string>
    <string name="prompt_sexuality">Sexuality:</string>
    <string name="prompt_gender">Gender:</string>
    <string name="prompt_profilePicture">Upload profile picture:</string>
    <string name="invalid_login">Username/password incorrect</string>
    <string name="prompt_fill_all_fields">Please ensure all fields are filled in</string>
    <string name="invalid_email">Your email is invalid</string>
    <string name="invalid_DOB_Age">Your DOB or age are invalid</string>
    <string name="info_default_profile">Age:\nGender:\nSexuality\n\nBio:\n\nHobbie 1:\nHobbie 2:\nHobbie 3:</string>
    <string name="prompt_bio">Bio:</string>
    <string name="btn_saveandReturn">Save and return</string>
    <string name="title_hobbie_1">Hobbie #1</string>
    <string name="title_hobbie_2">Hobbie #2</string>
    <string name="title_hobbie_3">Hobbie #3</string>
    <string name="title_hobbie_message">Please Enter a hobby</string>
    <string name="prompt_bio_main">BIO(please enter some details about yourself):</string>
</resources>
