<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserDetailsP3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/borderColour"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:accessibilityHeading="false"
        android:background="@color/backgroundColour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_page_title_hobbies_3"
        android:layout_width="112dp"
        android:layout_height="27dp"
        android:layout_marginTop="504dp"
        android:text="@string/title_hobbie_3"
        android:textColor="@color/textColour"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/img_logo"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomin" />

    <TextView
        android:id="@+id/txt_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/title_aboutyou"
        android:textColor="@color/textColour"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_page_title_hobbies_1"
        android:layout_width="112dp"
        android:layout_height="27dp"
        android:layout_marginTop="208dp"
        android:text="@string/title_hobbie_1"
        android:textColor="@color/textColour"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/img_logo"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_page_title_hobbies_2"
        android:layout_width="112dp"
        android:layout_height="27dp"
        android:layout_marginTop="360dp"
        android:text="@string/title_hobbie_2"
        android:textColor="@color/textColour"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/img_logo"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_text_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_nextP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_text_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/hobbies_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="200dp"
        android:autofillHints="e.g. Sports, Gaming"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title_hobbie_message"
        app:layout_constraintStart_toStartOf="@+id/txt_page_title_hobbies_1"
        app:layout_constraintTop_toTopOf="@+id/img_logo" />

    <EditText
        android:id="@+id/txt_hobbies_2_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="352dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title_hobbie_message"
        app:layout_constraintStart_toStartOf="@+id/txt_page_title_hobbies_2"
        app:layout_constraintTop_toTopOf="@+id/img_logo" />

    <EditText
        android:id="@+id/txt_hobbies_3_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title_hobbie_message"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="508dp" />

</androidx.constraintlayout.widget.ConstraintLayout>